# hello-solana

./: .gitignore  package.json
src/client/: main.py  main.ts
src/program/: Cargo.toml
src/program/src/: lib.rs
