[package]
name = "program"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.9.9"
borsh = "0.9.3"
borsh-derive = "0.9.1"

[dev-dependencies]
solana-program = "1.9.9"
solana-sdk = "1.9.9"

[lib]
name = "hello_solana"
crate-type = ["cdylib", "lib"]



